--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,19 @@
 node_modules/
 .env
+.env.local
+.env.production
 !.env.example
-uploads/
+uploads/*
+!uploads/.gitkeep
 *.log
 .DS_Store
 dist/
 build/
-logs/
+logs/*
+!logs/.gitkeep
 *.tsbuildinfo
+.idea/
+.vscode/
+*.swp
+*.swo
 
